# rust-chunker

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md
examples/: basic.rs  markdown.rs  overlap.rs
src/: chunk.rs  lib.rs  markdown.rs  recursive.rs  semantic.rs
